--- a/index.html
+++ b/index.html
@@ -2,74 +2,123 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <!-- CSS file links -->
+  <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
-  <script type="module" src="script.js"></script>
+  <!-- Google font links -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+  <!-- JavaScript file link -->
+  <script defer type="module" src="script.js"></script>
+  <!-- Title -->
   <title>Frontend Mentor | Time tracking dashboard</title>
 </head>
 <body>
-  <ol id="list"></ol>
-
-  Report for
-  Jeremy Robson
-
-  Daily
-  Weekly
-  Monthly
-
-  Work
-  5hrs <!-- daily -->
-  Previous - 7hrs <!-- daily -->
-  32hrs <!-- weekly -->
-  Previous - 36hrs <!-- weekly -->
-  103hrs <!-- monthly -->
-  Previous - 128hrs <!-- monthly -->
-
-  Play
-  1hr <!-- daily -->
-  Previous - 2hrs <!-- daily -->
-  10hrs <!-- weekly -->
-  Previous - 8hrs <!-- weekly -->
-  23hrs <!-- monthly -->
-  Previous - 29hrs <!-- monthly -->
-
-  Study
-  0hrs <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  4hrs <!-- weekly -->
-  Previous - 7hrs <!-- weekly -->
-  13hrs <!-- monthly -->
-  Previous - 19hrs <!-- monthly -->
-
-  Exercise
-  1hr <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  4hrs <!-- weekly -->
-  Previous - 5hrs <!-- weekly -->
-  11hrs <!-- monthly -->
-  Previous - 18hrs <!-- monthly -->
-
-  Social
-  1hr <!-- daily -->
-  Previous - 3hrs <!-- daily -->
-  5hrs <!-- weekly -->
-  Previous - 10hrs <!-- weekly -->
-  21hrs <!-- monthly -->
-  Previous - 23hrs <!-- monthly -->
-
-  Self Care
-  0hrs <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  2hrs <!-- weekly -->
-  Previous - 2hrs <!-- weekly -->
-  7hrs <!-- monthly -->
-  Previous - 11hrs <!-- monthly -->
-
+  <main>
+    <section class="container1">
+      <div class="content1">
+        <picture>
+          <img src="images/image-jeremy.png" alt="A smiling dark skinned man with dreadlocks" class="img">
+        </picture>
+        <div class="top1">
+          <p class="text">Report for</p>
+          <p class="name">Jeremy Robson</p>
+        </div>
+      </div>
+      <div class="bottom1">
+        <ul>
+          <li id="day">Daily</li>
+          <li id="week">Weekly</li>
+          <li id="month">Monthly</li>
+        </ul>
+      </div>
+    </section>
+    <section class="container container2">
+      <img src="images/icon-work.svg" alt="" class="logo">
+      <div class="content">
+        <div class="top">
+          <p class="title"></p>
+          <img src="images/icon-ellipsis.svg" alt="">
+        </div>
+        <div class="bottom">
+          <p class="current"></p>
+          <p class="previous"></p>
+        </div>
+      </div>
+    </section>
+    <section class="container container3">
+      <img src="images/icon-play.svg" alt="" class="logo">
+      <div class="content">
+        <div class="top">
+          <p class="title"></p>
+          <img src="images/icon-ellipsis.svg" alt="">
+        </div>
+        <div class="bottom">
+          <p class="current"></p>
+          <p class="previous"></p>
+        </div>
+      </div>
+    </section>
+    <section class="container container4">
+      <img src="images/icon-study.svg" alt="" class="logo">
+      <div class="content">
+        <div class="top">
+          <p class="title"></p>
+          <img src="images/icon-ellipsis.svg" alt="">
+        </div>
+        <div class="bottom">
+          <p class="current"></p>
+          <p class="previous"></p>
+        </div>
+      </div>
+    </section>
+    <section class="container container5">
+      <img src="images/icon-exercise.svg" alt="" class="logo">
+      <div class="content">
+        <div class="top">
+          <p class="title"></p>
+          <img src="images/icon-ellipsis.svg" alt="">
+        </div>
+        <div class="bottom">
+          <p class="current"></p>
+          <p class="previous"></p>
+        </div>
+      </div>
+    </section>
+    <section class="container container6">
+      <img src="images/icon-social.svg" alt="" class="logo">
+      <div class="content">
+        <div class="top">
+          <p class="title"></p>
+          <img src="images/icon-ellipsis.svg" alt="">
+        </div>
+        <div class="bottom">
+          <p class="current"></p>
+          <p class="previous"></p>
+        </div>
+      </div>
+    </section>
+    <section class="container container7">
+      <img src="images/icon-self-care.svg" alt="" class="logo">
+      <div class="content">
+        <div class="top">
+          <p class="title"></p>
+          <img src="images/icon-ellipsis.svg" alt="">
+        </div>
+        <div class="bottom">
+          <p class="current"></p>
+          <p class="previous"></p>
+        </div>
+      </div>
+    </section>
+  </main>
   
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Coded by <a href="#">Sunday Collins</a>.
+  </footer>
 </body>
 </html>
